# swizzy-rs

./: AGENTS.md  Cargo.toml  LICENSE  README.md  justfile  test.sh
.github/: dependabot.yml
.github/workflows/: build.yml  dependabot-release.yml  release.yml
examples/: basic_usage.rs  custom_formatting.rs  filtering_issues.rs
src/: lib.rs  main.rs
tests/: integration.rs
