[package]
name = "swizzy"
version = "1.1.0"
edition = "2024"
authors = ["Sarath C <csarath@gmail.com>"]
description = "A fast, developer-friendly SwiftLint output formatter that groups issues by file and provides clickable file paths for editor integration"
license = "MIT"
repository = "https://github.com/sharat/swizzy-rs"
homepage = "https://github.com/sharat/swizzy-rs"
documentation = "https://docs.rs/swizzy"
readme = "README.md"
keywords = ["swiftlint", "swift", "linter", "formatter", "development-tools"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "output.png",
    "anonymized_lint.json",
    "test.sh",
    "target/",
    ".github/"
]

[[bin]]
name = "swizzy"
path = "src/main.rs"

[lib]
name = "swizzy"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"      # Error handling
# atty = "0.2.14"      # DEPRECATED - replaced with std::io::IsTerminal
# Note: atty is deprecated and replaced with std::io::IsTerminal in Rust 1.70+
clap = "4.5.60"        # Command line argument parsing (MAJOR UPDATE)
colored = "3.1.1"       # Terminal colors (MAJOR UPDATE)
serde = { version = "1.0.228", features = ["derive"] } # JSON serialization
serde_json = "1.0.149" # JSON parsing

[dev-dependencies]
tempfile = "3.8.1"     # Temporary file creation for tests
